--- a/Grid_Dinamico_ko/Grid.html
+++ b/Grid_Dinamico_ko/Grid.html
@@ -3,7 +3,7 @@
 <head>
     <title>Grid Dinâmico com KnockoutJs e Bootstrap</title>
 
-    <!--A ordem dos scripts devem ser seguidas extritamentes da maneira como estão: primeiro: JQuery e depois o Knockout-->
+    <!--A ordem dos scripts devem ser seguidas estritamente da maneira como estão: primeiro: JQuery e depois o Knockout-->
     <script src="Scripts/jquery-2.1.4.min.js"></script>
     <script src="Scripts/knockout-3.3.0.js"></script>  
     <script src="Scripts/grid.js" type="text/javascript"></script>
